[package]
name = "tryolite"
version = "0.1.0"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.17.0"
procfs = "0.7.9"
regex = "1.3.9"
goblin = "0.2.3"
dynasm = "0.6.0"
dynasmrt = "0.6.0"

[dependencies]
sysinfo = "0.13.0"
rand = "0.7"

[lib]
name = "tryolib"
path = "src/lib.rs"
